--- a/views/artist.erb
+++ b/views/artist.erb
@@ -1,4 +1,7 @@
-<h1><%= params['username'] %>’s lively <%= params['year'] ? params['year'] : 'history' %></h1>
+<h1>
+  <img class="thumbnail" onhover="" style="float:left;padding-right: 200px" src="<%= @artist.image %>" alt="<%= @artist.name %>" text="<%= @artist.name %>">
+  <%= @artist.name %>’s lively <%= params['year'] ? params['year'] : 'history' %></h1>
+</h1>
 
 <div class="row">
   <div class="span6 stats">
@@ -6,11 +9,6 @@
     <% if params['year'] %><span><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span><% end %>
   </div>
   <div class="span8 histogram">
-    <ol class="top-terms">
-    <% @top_terms.first(10).each_with_index do |term, index| %>
-      <li class="term<%= index < 3 ? 1 : (index < 7 ? 2 : 3) %>"><%= term.first %></li>
-    <% end %>
-    </ol>
   </div>
 </div>
 
@@ -19,20 +17,6 @@
     <img align="middle" src="/images/sadkitten.png" text="I’m sad" alt="sad kitten :(">
   </div>
 <% end %>
-
-<ol class="media-grid">
-  <% @top_artists.first(24).each do |artist| %>
-    <li class="artist-image">
-      <span class="artist-image">
-        <img class="thumbnail" onhover="" src="<%= artist.image %>" alt="<%= artist.name + ": #{pluralize(artist.num_times)}" %>" title="<%= artist.name + ": #{pluralize(artist.num_times)}" %>">
-      </span>
-    </li>
-  <% end %>
-</ol>
-
-<div class="row">
-  <h5><div class="artist-name">&nbsp;</div></h5>
-</div>
 
 <div class="row">
 <div id="map"></div>
@@ -78,6 +62,21 @@
     </div>
    <% end %>
 </div>
+
+<ol class="media-grid">
+  <% @top_artists.first(24).each do |artist| %>
+    <li class="artist-image">
+      <span class="artist-image">
+        <img class="thumbnail" onhover="" src="<%= artist.image %>" alt="<%= artist.name + ": #{pluralize(artist.num_times)}" %>" text="<%= artist.name + ": #{pluralize(artist.num_times)}" %>">
+      </span>
+    </li>
+  <% end %>
+</ol>
+
+<div class="row">
+  <h5><div class="artist-name">&nbsp;</div></h5>
+</div>
+
 
 <script type="text/javascript">
 $(".artist-image img").hover(
