--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,53 +7,18 @@
   <link href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/lively.css" type="text/css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-  <style type="text/css">
-    body {
-      padding-top: 60px;
-    }
-  </style>
-
-  <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?sensor=false">
-  </script>
-  <script type="text/javascript">
-    function initialize() {
-        <% if @latlngs.any? %>
-        var latlng = new google.maps.LatLng(<%= @latlngs.first.first %>, <%= @latlngs.first.last %>);
-        <% else %>
-        var latlng = new google.maps.LatLng(-63.869714622204825, -58.3154296875);
-        <% end %>
-
-        var myOptions = {
-          zoom: 8,
-          center: latlng,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map"), myOptions);
-
-        var bounds = new google.maps.LatLngBounds();
-        <% @latlngs.each do |latlng| %>
-          pinLatLng = new google.maps.LatLng(<%= latlng.first.to_f %>, <%= latlng.last.to_f %>);
-          bounds.extend (pinLatLng);
-          pinMarkers = new google.maps.Marker({position: pinLatLng, map: map});
-        <% end %>
-        map.fitBounds(bounds);
-    }
-  </script>
+  <%= @javascript %>
 </head>
-<body onload="initialize()">
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
-          <span class="brand">live.ly</span>
-        </div>
+<body onload="<%= @on_load_javascript %>">
+  <div class="topbar">
+    <div class="fill">
+      <div class="container">
+        <span class="brand">live.ly</span>
       </div>
-
     </div>
-
+  </div>
   <div class="container">
-
-    <div class="hero-unit">
+  <div class="hero-unit">
       <%= yield %>
     </div>
 
@@ -83,7 +48,6 @@
       <a href="http://www.songkick.com"><img src="/images/songkick.png" width="100"></a>
       <a href="http://last.fm"><img src="/images/lastfm.jpg" width="100"></a>
     </footer>
-
-  </div> <!-- /container -->
+  </div>
 </body>
 </html>
