--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,2 @@
-<form method="get" action="/users">
-  <input type="text" placeholder="username" name="username">
-  <input type="text" placeholder="year" name="year"><input type="submit" value="go!">
-</form>
+<div class="row"><div class="span4">&nbsp;</div><div class="span6"><h1><a href="/users">songkick user</a></h1> <h2 style="padding:20px">or</h2> <h1><a href="/artists">artist</a></h1> </div><div class="span6">&nbsp;</div></div>
 
-<form method="get" action="/artists">
-  <input type="text" placeholder="artist mbid" name="artist_mbid">
-  <input type="text" placeholder="year" name="year"><input type="submit" value="go!">
-</form>
