--- a/views/_artists.erb
+++ b/views/_artists.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="span14">
 <ol class="media-grid">
   <% artists.first(24).each do |artist| %>
     <li class="artist-image">
@@ -7,6 +9,8 @@
     </li>
   <% end %>
 </ol>
+    </div>
+</div>
 <div class="row">
   <h5><div class="artist-name">&nbsp;</div></h5>
 </div>
