--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -50,13 +50,24 @@ a {
 li.artist-image {
   float:left;
 }
-span.artist-image {
+a.artist-image {
   background-color: black;
   border: 2px solid white;
   display: block;
   height: 100px;
   overflow: hidden;
   width: 100px;
+
+  border-radius: 0px;
+  box-shadow: none;
+  margin: 0 0 0px 0px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+a.artist-image:hover {
+  text-decoration: none;
+  border-color: #f86484;
 }
 
 .artist-count {
