--- a/views/_artists.erb
+++ b/views/_artists.erb
@@ -3,9 +3,9 @@
 <ol class="media-grid">
   <% artists.first(24).each do |artist| %>
     <li>
-      <a class="artist-image" <% if artist.mbid %>href="/artists/<%= artist.mbid%>"<% end %>>
+      <% if artist.mbid %><a class="artist-image" href="/artists/<%= artist.mbid%>"><% else %><span class="artist-image"><% end %>
         <img class="thumbnail" onhover="" <% if artist.mbid %>id="<%= artist.mbid %>"<% end %> src="" alt="<%= artist.name + ": #{pluralize(artist.num_times)}" %>" title="<%= artist.name + ": #{pluralize(artist.num_times)}" %>">
-      </a>
+      <% if artist.mbid %></a><% else %></span><% end %>
     </li>
   <% end %>
 </ol>
