--- a/views/users.erb
+++ b/views/users.erb
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="span4"><h1><a href="/users">songkick user</a></h1></div>
+  <div class="span6"><h1><a href="/users">songkick user</a></h1></div>
+</div>
+
+<div class="row" style="margin-top:40px">
   <div class="span10">
     <form method="get" action="/users">
       <input type="text" placeholder="username" name="username">
