--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <span class="brand">live.ly</span>
+        <span class="brand"><a href="/">live.ly</a></span>
       </div>
     </div>
   </div>
