--- a/views/users.erb
+++ b/views/users.erb
@@ -6,6 +6,11 @@
   <div class="span10">
     <form method="get" action="/users">
       <input type="text" placeholder="username" name="username">
+      <select name="p" style="width:100px">
+        <option value=""></option>
+        <option value="f">girl</option>
+        <option value="m">boy</option>
+       </select>
       <input type="text" placeholder="year (optional)" name="year"><input type="submit" value="go!">
     </form>
   </div>
