--- a/views/artist.erb
+++ b/views/artist.erb
@@ -15,7 +15,8 @@
   <div class="span6 stats">
     <span><%= pluralize(@events.size, 'concert') %><% if params['year'] %> this year<% end %></span>
     <% if params['year'] %><span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span><% end %>
-    <span style="font-size:smaller">On tour since <%=(@events.first['start']['date']).split('-').first %></span>
+    <span class="percentage">On tour since <%=(@events.first['start']['date']).split('-').first %></span>
+    <%= erb :_venue_stats %>
   </div>
 </div>
 
