--- a/views/user.erb
+++ b/views/user.erb
@@ -12,6 +12,7 @@
     <div class="stats">
       <span><%= pluralize(@events.size, 'concert') %><% if params['year'] %> this year<% end %></span>
       <% if params['year'] %><span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span><% end %>
+      <%= erb :_venue_stats %>
     </div>
   </div>
 </div>
