--- a/views/artist.erb
+++ b/views/artist.erb
@@ -16,7 +16,7 @@
     <span><%= pluralize(@events.size, 'concert') %><% if params['year'] %> this year<% end %></span>
     <% if params['year'] %><span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span><% end %>
     <span class="percentage">On tour since <%=(@events.first['start']['date']).split('-').first %></span>
-    <%= erb :_venue_stats %>
+    <%#= erb :_venue_stats %>
   </div>
 </div>
 
