--- a/views/artist.erb
+++ b/views/artist.erb
@@ -14,8 +14,11 @@
 
   <div class="span6 stats">
     <span><%= pluralize(@events.size, 'concert') %><% if params['year'] %> this year<% end %></span>
-    <% if params['year'] %><span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span><% end %>
-    <span class="percentage">On tour since <%=(@events.first['start']['date']).split('-').first %></span>
+    <% if params['year'].to_i > 0 %>
+      <span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span>
+    <% else %>
+      <span class="percentage">On tour since <%=(@events.first['start']['date']).split('-').first %></span>
+    <% end %>
     <%#= erb :_venue_stats %>
   </div>
 </div>
