--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>live.ly</title>
+  <title>relively</title>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <link href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.css" rel="stylesheet">
@@ -13,7 +13,7 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">
-        <span class="brand"><a href="/">live.ly</a></span>
+        <span class="brand"><a href="/">relively</a></span>
       </div>
     </div>
   </div>
@@ -21,26 +21,6 @@
   <div class="hero-unit">
       <%= yield %>
     </div>
-
-    <!--&lt;!&ndash; Example row of columns &ndash;&gt;-->
-    <!--<div class="row">-->
-      <!--<div class="span6">-->
-        <!--<h2>Heading</h2>-->
-        <!--<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>-->
-        <!--<p><a class="btn" href="#">View details &raquo;</a></p>-->
-
-      <!--</div>-->
-      <!--<div class="span5">-->
-        <!--<h2>Heading</h2>-->
-         <!--<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>-->
-        <!--<p><a class="btn" href="#">View details &raquo;</a></p>-->
-     <!--</div>-->
-      <!--<div class="span5">-->
-        <!--<h2>Heading</h2>-->
-        <!--<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>-->
-        <!--<p><a class="btn" href="#">View details &raquo;</a></p>-->
-      <!--</div>-->
-    <!--</div>-->
 
     <footer>
       <div><a href="http://saleandro.com">saleandro</a></div><div>and</div>
@@ -53,6 +33,7 @@
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-33556991-1']);
+    _gaq.push(['_setDomainName', 'relively.com']);
     _gaq.push(['_trackPageview']);
 
     (function() {
