--- a/views/user.erb
+++ b/views/user.erb
@@ -8,9 +8,9 @@
     </div>
   </div>
   <div class="span10">
-    <h1 style="text-align:right"><%= params['username'] %>’s lively <%= params['year'] ? params['year'] : 'history' %></h1>
+    <h1 style="text-align:right"><%= params['username'] %>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %></h1>
     <div class="stats">
-      <span><%= pluralize(@events.size, 'concert') %><% if params['year'] %> this year<% end %></span>
+      <span><%= pluralize(@events.size, 'concert') %><% if params['year'].to_i > 0 %> this year<% end %></span>
       <% if params['year'].to_i > 0 %>
         <span class="percentage"><%= "%.2f" % ((@events.size.to_f/@total_events)*100.0) %>% of <%= @total_events %></span>
       <% else %>
