--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -2,8 +2,21 @@ body {
   padding-top: 60px;
 }
 
+.navbar .brand {
+  margin: 0;
+  margin-left: 10px;
+  font-size: 46px;
+}
+.navbar .brand a:hover {
+  color: #f86484;
+  text-decoration: none;
+}
+
 a {
  color: #f86484;
+}
+a:hover {
+  text-decoration: none;
 }
 
 #map {
