--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
-<div class="row"><div class="span4">&nbsp;</div><div class="span6"><h1><a href="/users">songkick user</a></h1> <h2 style="padding:20px">or</h2> <h1><a href="/artists">artist</a></h1> </div><div class="span6">&nbsp;</div></div>
+<div class="row">
+  <div class="span9">
+    <div class="span6"><h2><a href="/users">songkick user</a></h2> <h3 style="padding:20px">or</h3> <h2><a href="/artists">artist</a></h2> </div>
+  </div>
+</div>
