--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>relively</title>
+  <title>relively - <%= @title %></title>
+  <meta name="description" content="Concert and festival going history for Songkick users, bands, and artists. Top cities, top venues, and top artists." />
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-  <link href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.css" rel="stylesheet">
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/lively.css" type="text/css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
   <%= @javascript %>
 </head>
 <body onload="<%= @on_load_javascript %>">
-  <div class="topbar">
-    <div class="fill">
-      <div class="container">
-        <span class="brand"><a href="/">relively</a></span>
-      </div>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <h1 class="brand"><a href="/">relively</a></h1>
     </div>
   </div>
   <div class="container">
-  <div class="hero-unit">
-      <%= yield %>
-    </div>
+    <%= yield %>
 
     <footer>
       <div><a href="http://saleandro.com">saleandro</a></div><div>and</div>
