Removing 'gender' option. Improving style and copying JS locally for faster loading time

--- a/views/user.erb
+++ b/views/user.erb
@@ -1,13 +1,13 @@
-<div class="row" style="margin-bottom:20px">
+<div class="row" style="margin-bottom:20px;margin-top:20px">
   <div class="span4">
-    <script type="text/javascript" src="http://www.delta-9.net/musichackday/person.js"></script>
+    <script type="text/javascript" src="/javascripts/person.js"></script>
     <div id="person" style="float:left;">
-      <img src="/images/<%= params['p'] == 'f' ? 'girl' : 'boy' %>.png" />
+      <img src="/images/girl.png" />
     </div>
     <div id="key">
     </div>
   </div>
-  <div class="span10">
+  <div class="span8">
     <h2 style="text-align:right"><%= params['username'] %>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %></h2>
     <div class="stats">
       <span><%= pluralize(@events.size, 'concert') %><% if params['year'].to_i > 0 %> this year<% end %></span>
