Small style tweaks

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,12 +19,16 @@
   <div class="container">
     <%= yield %>
 
-    <footer>
-      <div><a href="http://saleandro.com">saleandro</a></div><div>and</div>
-      <a href="http://www.echonest.com"><img src="/images/echonest.gif" width="100"></a>
-      <a href="http://www.songkick.com"><img src="/images/songkick.png" width="100"></a>
-      <a href="http://last.fm"><img src="/images/lastfm.jpg" width="100"></a>
-    </footer>
+    <div class="row">
+      <div class="span12">
+        <footer>
+          <div><a href="http://saleandro.com">saleandro</a></div><div>and</div>
+          <a href="http://www.echonest.com"><img src="/images/echonest.gif" width="100"></a>
+          <a href="http://www.songkick.com"><img src="/images/songkick.png" width="100"></a>
+          <a href="http://last.fm"><img src="/images/lastfm.jpg" width="100"></a>
+        </footer>
+      </div>
+    </div>
   </div>
 
   <script type="text/javascript">
