--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -60,6 +60,17 @@ a:hover {
   color: #808080;
 }
 
+.artists {
+  margin-left: 0;
+}
+
+.artist {
+  display: inline-block;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  vertical-align: top;
+}
+
 a.artist-image, span.artist-image {
   float:left;
   background-color: black;
@@ -94,11 +105,6 @@ a.artist-image:hover {
   padding: 2px 6px 2px 4px;
 }
 
-.artist-name {
-  font-size: 1.6em;
-  margin: 10px;
-}
-
 .distance {
   font-size: 1.6em;
   margin: 10px;
@@ -110,6 +116,12 @@ a.artist-image:hover {
 
 h3 {
   margin-top: 10px;
+}
+
+h5 {
+  font-size: 1.6em;
+  margin: 10px 10px 10px 0;
+  color: #666666;
 }
 
 .topbar {
@@ -130,6 +142,7 @@ h3 {
 
 footer {
   text-align: right;
+  margin-top: 20px;
 }
 
 footer img {
