--- a/views/_artists.erb
+++ b/views/_artists.erb
@@ -1,17 +1,14 @@
-<div class="row">
-  <div class="span14">
-<ol class="media-grid">
-  <% artists.first(24).each do |artist| %>
-    <li>
-      <% if artist.mbid %><a class="artist-image" href="/artists/<%= artist.mbid%>"><% else %><span class="artist-image"><% end %>
-        <img class="thumbnail" onhover="" <% if artist.mbid %>id="<%= artist.mbid %>"<% end %> src="" alt="<%= artist.name + ": #{pluralize(artist.num_times)}" %>" title="<%= artist.name + ": #{pluralize(artist.num_times)}" %>">
-      <% if artist.mbid %></a><% else %></span><% end %>
-    </li>
-  <% end %>
-</ol>
-    </div>
+<div class="row-fluid artists">
+<% artists.first(24).each do |artist| %>
+  <div class="artist">
+    <% if artist.mbid %><a class="artist-image" href="/artists/<%= artist.mbid%>"><% else %><span class="artist-image"><% end %>
+      <img class="thumbnail" onhover="" <% if artist.mbid %>id="<%= artist.mbid %>"<% end %> src="" alt="<%= artist.name + ": #{pluralize(artist.num_times)}" %>" title="<%= artist.name + ": #{pluralize(artist.num_times)}" %>">
+    <% if artist.mbid %></a><% else %></span><% end %>
+  </div>
+<% end %>
 </div>
-<div class="row">
+
+<div class="row-fluid">
   <h5><div class="artist-name">&nbsp;</div></h5>
 </div>
 
