--- a/views/_map.erb
+++ b/views/_map.erb
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row span12">
   <div id="map"></div>
 </div>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js"></script>
 <script type="text/javascript">
   function initialize() {
     <% if latlngs && latlngs.any? %>
