--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -26,10 +26,10 @@ a:hover {
 }
 
 .top-terms {
-  padding: 20px;
+  padding: 0;
+  margin: 0;
   list-style: none;
-  text-align: center;
-  width: 400px;
+  text-align: left;
 }
 
 .top-terms li {
