--- a/views/artist.erb
+++ b/views/artist.erb
@@ -1,10 +1,14 @@
-<h2>
-  <img class="thumbnail" src="<%= @artist.image %>" alt="<%= @artist.name %>" text="<%= @artist.name %>">
-  <span><%= @artist.name %>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %></span>
-</h2>
+<div class="row">
+  <div class="span12">
+    <h2>
+    <img class="thumbnail" src="<%= @artist.image %>" alt="<%= @artist.name %>" text="<%= @artist.name %>" style="display:inline-block">
+    <span><%= @artist.name %>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %></span>
+    </h2>
+  </div>
+</div>
 
 <div class="row">
-  <div class="span8 histogram">
+  <div class="span6">
     <ol class="top-terms">
     <% @top_terms.first(10).each_with_index do |term, index| %>
       <li class="term<%= index < 3 ? 1 : (index < 7 ? 2 : 3) %>"><%= term.first %></li>
