--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -25,7 +25,7 @@ a:hover {
   margin-top: 10px;
 }
 
-.top-terms {
+/* .top-terms {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -35,7 +35,7 @@ a:hover {
 .top-terms li {
   display: inline;
   margin-right: 10px;
-}
+} */
 
 .stats {
   font-size: 2em;
