Remove onload js as it's not needed

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
   <%= @javascript %>
 </head>
-<body onload="<%= @on_load_javascript %>">
+<body>
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <h1 class="brand"><a href="/">relively</a></h1>
