Lots of styling cahnges, use newer bootstrap and google font, fix errors for invalid users/year

--- a/views/_map.erb
+++ b/views/_map.erb
@@ -1,29 +1,26 @@
-<div class="row span12">
-  <div id="map"></div>
-</div>
+<% if latlngs && latlngs.any? %>
+  <div class="row col-sm-12">
+    <div id="map"></div>
+  </div>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ApiAccess.key('google_maps') %>&callback=initialize" type="text/javascript"></script>
-<script type="text/javascript">
-  function initialize() {
-    <% if latlngs && latlngs.any? %>
-    var latlng = new google.maps.LatLng(<%= latlngs.first.first %>, <%= latlngs.first.last %>);
-    <% else %>
-    var latlng = new google.maps.LatLng(-63.869714622204825, -58.3154296875);
-    <% end %>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ApiAccess.key('google_maps') %>&callback=initialize" type="text/javascript"></script>
+  <script type="text/javascript">
+    function initialize() {
+      var latlng = new google.maps.LatLng(<%= latlngs.first.first %>, <%= latlngs.first.last %>);
+      var myOptions = {
+        zoom: 8,
+        center: latlng,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+      var map = new google.maps.Map(document.getElementById("map"), myOptions);
 
-    var myOptions = {
-      zoom: 8,
-      center: latlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map"), myOptions);
-
-    var bounds = new google.maps.LatLngBounds();
-    <% latlngs.each do |latlng| %>
-      pinLatLng = new google.maps.LatLng(<%= latlng.first.to_f %>, <%= latlng.last.to_f %>);
-      bounds.extend (pinLatLng);
-      pinMarkers = new google.maps.Marker({position: pinLatLng, map: map});
-    <% end %>
-    map.fitBounds(bounds);
-  }
-</script>
+      var bounds = new google.maps.LatLngBounds();
+      <% latlngs.each do |latlng| %>
+        pinLatLng = new google.maps.LatLng(<%= latlng.first.to_f %>, <%= latlng.last.to_f %>);
+        bounds.extend (pinLatLng);
+        pinMarkers = new google.maps.Marker({position: pinLatLng, map: map});
+      <% end %>
+      map.fitBounds(bounds);
+    }
+  </script>
+<% end %>
