--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="span9">
-    <div class="span6"><h2><a href="/users">songkick user</a></h2> <h3 style="padding:20px">or</h3> <h2><a href="/artists">artist</a></h2> </div>
+  <div class="col-sm-12 text-center">
+      <h3>Pick a</h3>
+      <h2><a href="/users">songkick user</a></h2>
+      <h3>or</h3>
+      <h2><a href="/artists">artist</a></h2>
   </div>
 </div>
