--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -1,15 +1,26 @@
 body {
-  padding-top: 60px;
+  padding-top: 80px;
+}
+
+.navbar-inverse {
+  background-color: #686465;
+  border-color: #686465;
 }
 
 .navbar .brand {
   margin: 0;
-  margin-left: 10px;
+  margin-left: 20px;
+  margin-bottom: 10px;
   font-size: 46px;
+  font-family: 'Roboto Slab', serif;
 }
 .navbar .brand a:hover {
   color: #f86484;
   text-decoration: none;
+}
+
+h1, h2 {
+  font-family: 'Roboto Slab', serif;
 }
 
 a {
@@ -146,13 +157,11 @@ footer {
 }
 
 footer img {
-  margin-left: 10px;
-  margin-bottom: 10px;
-  vertincal-align: bottom;
+  vertical-align: middle;
 }
 
-footer a {
-  font-size: 1.6em;
+footer {
+  font-size: 0.9em;
   font-weight: bold;
 }
 
