--- a/views/artists.erb
+++ b/views/artists.erb
@@ -1,25 +1,22 @@
+<div class="row">
+  <div class="col-sm-12"><h1><a href="/artists">artist</a></h1></div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12">
+    <form class="form-inline"  method="get" action="/artists">
+       <fieldset>
+      <input type="text" placeholder="artist" name="artist_name" value="<%= params[:artist_name] %>">
+      <input type="text" placeholder="year (optional)" name="year">
+      <input class="btn" type="submit" value="Go!">
+       </fieldset>
+    </form>
+  </div>
+</div>
 <% if params[:artist_name] %>
-<div class="row" style="margin-bottom:40px">
-  <div class="span12">
-    <div class="alert-message error">Sorry, we couldn’t find “<%= params[:artist_name] %>” :(</div>
+<div class="row" style="margin-top:10px">
+  <div class="col-sm-8">
+    <div class="alert alert-info" role="alert">Sorry, we couldn’t find “<%= params[:artist_name] %>” :(</div>
   </div>
 </div>
 <% end %>
-
-<div class="row">
-  <div class="span4"><h2><a href="/artists">artist</a></h2></div>
-  <div class="span10">
-  </div>
-</div>
-
-<div class="row " style="margin-top:40px">
-  <div class="span10">
-  <form class="form-inline"  method="get" action="/artists">
-     <fieldset>
-    <input type="text" placeholder="artist" name="artist_name" value="<%= params[:artist_name] %>">
-    <input type="text" placeholder="year (optional)" name="year">
-    <input class="btn" type="submit" value="Go!">
-     </fieldset>
-  </form>
-  </div>
-</div>
