--- a/views/users.erb
+++ b/views/users.erb
@@ -1,16 +1,23 @@
 <div class="row">
-  <div class="span6"><h2><a href="/users">songkick user</a></h2></div>
+  <div class="col-sm-6"><h2><a href="/users">songkick user</a></h2></div>
 </div>
 
-<div class="row" style="margin-top:40px">
-  <div class="span10">
+<div class="row">
+  <div class="col-sm-10">
     <form class="form-inline" method="get" action="/users">
        <fieldset>
-      <input type="text" placeholder="username" name="username">
-      <input type="text" placeholder="year (optional)" name="year">
+      <input type="text" placeholder="username" name="username" style="width:220px;" value="<%= params[:username] %>">
+      <input type="number" placeholder="year (optional)" name="year" style="width:120px;" value="<%= params[:year] %>" maxlength="4">
       <input class="btn" type="submit" value="Go!">
        </fieldset>
     </form>
   </div>
 </div>
 
+<% if params[:username] %>
+<div class="row" style="margin-top:10px">
+  <div class="col-sm-8">
+    <div class="alert alert-info" role="alert">Sorry, we couldn’t find “<%= params[:username] %>” :(</div>
+  </div>
+</div>
+<% end %>
