--- a/public/stylesheets/lively.css
+++ b/public/stylesheets/lively.css
@@ -18,6 +18,10 @@ body {
   color: #f86484;
   text-decoration: none;
 }
+.navbar .brand a {
+  color: #f86484;
+  text-decoration: none;
+}
 
 h1, h2 {
   font-family: 'Roboto Slab', serif;
@@ -154,6 +158,7 @@ h5 {
 footer {
   text-align: right;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 footer img {
