--- a/views/artists.erb
+++ b/views/artists.erb
@@ -6,8 +6,8 @@
   <div class="col-sm-12">
     <form class="form-inline"  method="get" action="/artists">
        <fieldset>
-      <input type="text" placeholder="artist" name="artist_name" value="<%= params[:artist_name] %>">
-      <input type="text" placeholder="year (optional)" name="year">
+      <input type="text" placeholder="artist name" style="width:220px;" name="artist_name" value="<%= params[:artist_name] %>" required>
+      <input type="text" placeholder="year (optional)" name="year" style="width:120px;" value="<%= params[:year] %>" maxlength="4" minlength="4">
       <input class="btn" type="submit" value="Go!">
        </fieldset>
     </form>
