--- a/views/_top_locations.erb
+++ b/views/_top_locations.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-bottom: 20px">
   <% if top_venues.any? %>
     <div class="col-sm-4">
     <h5><div class="top-venue">Top venues</div></h5>
