--- a/views/user.erb
+++ b/views/user.erb
@@ -19,8 +19,11 @@
 
 <%= erb :_no_events if @events.empty? %>
 
+<h5 style="margin-top:40px"><div>Top artists</div></h5>
 <%= erb :_artists, :locals => {:artists => @top_artists} %>
 
-<%= erb :_top_locations, :locals => {:top_festivals => @top_festivals, :top_venues => @top_venues, :top_metro_areas => @top_metro_areas} %>
-
 <%= erb :_map, :locals => {:latlngs => @latlngs} %>
+
+<br>
+
+<%= erb :_top_locations, :locals => {:top_festivals => @top_festivals, :top_venues => @top_venues, :top_metro_areas => @top_metro_areas} %>
